Added CSS Box Model information page

--- a/hello-css.html
+++ b/hello-css.html
@@ -2,35 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-       <title>Hello, CSS</title>
-    <link rel='stylesheet' href='styles.css'/>
+       <title></title>Boxes Are Easy!</title>
+    <link rel='stylesheet' href='box-style.css'/>
 </head>
 <body>
-    <h1> Hello, CSS</h1>
+   <h1> Headings Are Block Elements</h1>
+   <p> Paragraphs are blocks, too. <em>However</em>, &lt;em&gt; and &lt; strong&gt; elements are not. They are <strong> inline </strong> elements.</p>
 
-    <p>CSS lets us style HTML elements. There's also <a href='dummy.html'>another page</a> associated with this example.</p>
-
-    <h2> List Styles</h2>
-
-    <p> YOu can style unordered lists with the following bullets:</p>
-
-    <ul>
-        <li>disc</li>
-        <li>circle</li>
-        <li>square</li>
-    </ul>
-
-    <p>And you can number orderd lists with the following:</p>
-
-    <ol>
-        <li>decimal</li>
-        <li>lower-roman</li>
-        <li>upper-roman</li>
-        <li>lower-alpha</li>
-        <li>upper-alpha</li>
-       <li>(and many more!)</li>
-    </ol>
-
+   <div style='padding-top: 1px'></div> <!-- Add this--> <div class=""></div>
+    <p>Block elements define the flow of the HTLM document, while inline do not.</p>
     
+    <div>Button</div>
     </body>
 </html>
