Add CSS Box Model

--- a/css-boxmodel/css-box-model.html
+++ b/css-boxmodel/css-box-model.html
@@ -10,7 +10,9 @@
    <p> Paragraphs are blocks, too. <em>However</em>, &lt;em&gt; and &lt; strong&gt; elements are not. They are <strong> inline </strong> elements.</p>
 
    <div style='padding-top: 1px'></div> <!-- Add this--> <div class=""></div>
-    <p>Block elements define the flow of the HTLM document, while inline do not.</p>
+    <p>Block elements  can define the flow of the HTLM document, while inline do not.</p>
+      
+  
 
     <div>Button</div>
     </body>
