--- a/css-selectors/selectors.html
+++ b/css-selectors/selectors.html
@@ -6,7 +6,7 @@
      <link rel='stylesheet' href='style.css'/>
 </head>
 <body>
-    
+    <div class='page'>
     <h1> CSS Selectors</h1>
 
     <p class='synopsis'>CSS selectors let you <em>select</em> individual HTML elements in an HTML document. This is <strong> super</strong> useful.</p>
@@ -15,6 +15,10 @@
 
     <p> We'll also be talking about links in this example, so here's <a href='https://www.internetingishard.com'>Interneting is Hard</a> for us to style. </p>
 
-    <div>Button One</div>
+    <div class='button'>Button One</div>
+    <div class='button call-to-action'>Button Two</div>
+
+    </div>
+
 </body>
 </html>
