--- a/css-selectors/selectors.html
+++ b/css-selectors/selectors.html
@@ -15,9 +15,18 @@
 
     <p> We'll also be talking about links in this example, so here's <a href='https://www.internetingishard.com'>Interneting is Hard</a> for us to style. </p>
 
-    <div class='button'>Button One</div>
-    <div class='button call-to-action'>Button Two</div>
+    <a class='button' href='nowhere.html'>Button One</a>
 
+    <a class='button call-to-action' href='nowhere.html'>Button Two</a>
+
+    <a id='button-2' class='button' href='nowhere.html'>Button Two</a>
+    
+    <div class='sidebar'>
+        <p>If this page had a sidear ...</p>
+        <p>We'd have some problems with pseudo-classes.</p>
+    </div>
+
+    .page >p:first-of-type { color: #7E8184; font-style: italic;}
     </div>
 
 </body>
