--- a/floats.html
+++ b/floats.html
@@ -13,7 +13,7 @@
         <div class="sidebar"></div>
         <div class="content">
         <img src='?' class='article-image'/>
-        <p> loren ipsum </p>
+        <p> loren ipsum  40 characters </p>
     </div>
 </div>
 </div>
