--- a/floats.html
+++ b/floats.html
@@ -13,7 +13,7 @@
         <div class="sidebar"></div>
         <div class="content">
         <img src='?' class='article-image'/>
-        <p> loren ipsum  40 characters </p>
+        <p> loren ipsum  40 characters in this paragraph  </p>
     </div>
 </div>
 </div>      
@@ -30,7 +30,7 @@
             <div class='column'></div>
             <div class='column'></div>
 </div>
-   
+       
 </body>
 </html>
 
