--- a/Flexbox-Tutorial/flexbox.html
+++ b/Flexbox-Tutorial/flexbox.html
@@ -4,15 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Some Web Page</title>
-    <link rel='styesheet' href="styles.css"/>
+    <link rel='stylesheet' href='styles.css'/>
 </head>
 <body>
 
-    <div class='menu-container'>
+<div class='menu-container'>
+    <div class='header'>
+        <div class='photo-grid-container'>
+                    <div class='photo-grid'>
+                         <img src='images/one.svg'/>    
+                            </div>
+                        <div class='photo-grid-item'>
+                         <img src='images/two.svg'>
+                         </div>
+                        <div class='photo-grid-item'>
+                         <img src='images/three.svg'>
+                        <div class='photo-grid-item'>
+                            <img src='images/four.svg'>
+                        <div class='photo-grid-item last item'>
+                        <img src='images/five.svg'>
+                        </div>
+                        </div>
+                        </div>
+                        </div>
+                        </div>
+            <div class='footer'>
+                    <div class='footer-item footer-one'></div>
+                    <div class='footer-item footer-two'></div>
+                    <div class='footer-item footer-three'></div>
+            </div>
+            </div>
+        <div class='suscribe'>Suscribe &#9662;</div>
+            <div class='logo'><img src='images/awesome-logo.svg'/>
+            </div>
+            <div class='social'><img src='images/social-icons.svg'/>
+            </div>
+        </div>
+    </div>
+
     <div class='menu'>
         <div class='date'>Aug 14, 2016</div>
-        <div class='signup'>Sign Up</div>
-        <div class='login'>Login</div>
+        <div class='links'>
+        
+            <div class='signup'>Sign Up</div>
+            <div class='login'>Login</div>
+        </div>
     </div>
     </div>
    </body>
