--- a/responsive-design/responsive.html
+++ b/responsive-design/responsive.html
@@ -11,12 +11,33 @@
    
 <div class='page'>
 <div class='section menu'></div>
+
 <div class='section header'>
-    <img src='images/header.svg'/>
+    <div class="photo">
+       <picture>
+            <source media='(min-width: 40px)'
+                    scrset='images/photo-big.jpg'/>
+            <source media="(max-width: 400px)"
+                    srcset="images/photo-tall.jpg"/>
+            <img src='images/photo-small.jpg'/>
+        </picture>
+    </div>
 </div>
+                
+    <img src='images/photo-small.jpg'
+        srcset="images/photo-big.jpg 2000w,
+        images/photo-small.jpg 1000w"
+        sizes="(min-width: 960px) 960px, 100vw"/>
+    </div>
+</div>
+
 <div class='section content'>
-    <img src='images/content.svg'/>
+    <div class='illustration'>
+    <img  class='illustration-small.png'srcset='images/illustration-small.png 1x, images/illustration-big.png 2x' style='max-width: 500px'/>
 </div>
+</div>
+
+
 <div class='section sign-up'>
     <img src='images/sign-up.svg'/>
 <div class='section feature-1'>
