Add HTML Semanticfile

--- a/semantic-html/article.html
+++ b/semantic-html/article.html
@@ -51,7 +51,7 @@
 <section>
     <h2>Inline Semantic HTML</h2>
     <section>
-<p>The <code>&lt;time&gt;</code> element is semantci, but it's not sectioning content.</p>
+<p>The <code>&lt;time&gt;</code> element is semantic, but it's not sectioning content.</p>
 </section>
 
 <footer>
